# setup-server

./: Dockerfile  README.md  bootstrap-server-start.sh  bootstrap-server.py  deploy.sh  pull.sh  pyproject.toml  server.py  start.sh
.github/workflows/: deploy.yml
